# YTCaption-Easy-Youtube-API

./: .bandit.yml  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ANALISE-ERRO-ASYNCIO.md  ANALISE-LOGS-ERROS.md  ARQUITETURA_MULTI_VM.md  BUGLANDIA.md  CACHE_CONFIGURACAO_COMPLETA.md  CHECK.md  CLEANUP_AUDIT_FIX.md  CODE_QUALITY_IMPROVEMENTS.md  COMMIT-MESSAGE.txt  COMPARE.md  CORRECOES_27_JAN_2026.md  CORRECOES_CONFLITOS_NOMES.md  CORRECOES_REALIZADAS.md  CORREÇÕES_OUTUBRO_2025.md  DEPLOY-FIX-PLAN.md  DEPLOY-GUIDE.md  DEPLOY-URGENTE.md  DIAGNOSTIC-PROXMOX.sh  Dockerfile  ENV_STANDARDIZATION_REPORT.md  ERRO.md  EXECUTIVE_SUMMARY.md  FIX-FILE-SIZE-LIMIT-413-ERROR.md  FIX_ORCHESTRATOR_IPS.md  GPU-SETUP-README.md  GPU-STATUS.md  GUIA_RAPIDO_DEPLOY.md  HOTFIX-CELERY-QUEUE.md  HOTFIX-SUMMARY.md  HOTFIX-SYNC-CLEANUP.md  IMPLEMENTACAO-COMPLETA.md  INSTRUCOES-PENDENTES.md  (+94 more)
.opencode/: install.md  opencode copy.json  opencode.json
agent/: agent-policy.md  architecture.md  commands.md  context-and-tools.md  validation.md
clothes-segmentation/: .gitignore  AGENTS.md  DECISIONS.md  MEMORY.md  Makefile  Makefile.ps1  README.md  TASK.md  requirements.txt
common/: __init__.py  di.py  exceptions.py  health_utils.py  requirements-test.txt  setup.py
docs/: 01-GETTING-STARTED.md  02-INSTALLATION.md  03-CONFIGURATION.md  04-API-USAGE.md  07-DEPLOYMENT.md  (+45 more)
docs-en/: README.md
old_project/projeto_v4/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
old_project/projeto_v4/adapters/inbound/: api.py
old_project/projeto_v4/adapters/outbound/: cached_provider.py  fallback_provider.py  file_storage.py  whisper_provider.py  youtube_stub.py  youtube_transcript.py
old_project/projeto_v4/app/: config.py  main.py
old_project/projeto_v4/application/ports/: caption_provider.py  storage.py
old_project/projeto_v4/application/use_cases/: fetch_captions.py  save_from_cache.py
old_project/projeto_v4/data/cache/: dQw4w9WgXcQ.json
old_project/projeto_v4/data/captions/: dQw4w9WgXcQ.txt
old_project/projeto_v4/domain/: entities.py
old_project/projeto_v4/infrastructure/: cache.py  resilience.py
old_project/projeto_v4/scripts/: run.ps1
old_project/projeto_v4/tests/: test_captions_flow.py  test_health.py  test_use_case.py
(+2448 files in other folders)
