[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytcaption-projeto-v3"
version = "0.1.0"
description = "API local simples e resiliente para processamento de legendas (arquitetura hexagonal)"
authors = [{ name = "John Heberty" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "orjson>=3.10.0",
  "youtube-transcript-api>=0.6.3",
  "yt-dlp>=2024.7.1",
  "openai-whisper>=20231117",
]
readme = "README.md"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "httpx>=0.27",
]

[tool.setuptools]
packages = ["projeto_v3"]

[tool.setuptools.package-dir]
projeto_v3 = "."